Fix opacity
The root of the problem was the opacity being set to 0, which meant that the pixels were completely invisible.

--- a/Etch.css
+++ b/Etch.css
@@ -90,7 +90,7 @@ h1 {
     background-color:black;
     border-radius:50%;
     pointer-events:none;
-    opacity:0;
+    opacity:1;
     transition:opacity 0.3s ease;
     z-index:2;
 }
